apps/homeassistant/manifests/esphome/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/version: 2024.9.1
  name: esphome
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: esphome
  serviceName: esphome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: esphome
        app.kubernetes.io/version: 2024.9.1
    spec:
      containers:
        - env:
            - name: ESPHOME_DASHBOARD_USE_PING
              value: "true"
          image: esphome/esphome:2024.9.1
          imagePullPolicy: IfNotPresent
          name: esphome
          ports:
            - containerPort: 6052
              name: http
          resources:
            limits:
              cpu: 1800m
              memory: 1000Mi
            requests:
              cpu: 400m
              memory: 320Mi
          volumeMounts:
            - mountPath: /config
              name: esphome-data
      hostNetwork: true
      restartPolicy: Always
      serviceAccountName: esphome
  volumeClaimTemplates:
    - metadata:
        name: esphome-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 300Mi
        storageClassName: qnap-nfs
