apps/homeassistant/manifests/esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: default
  labels:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/version: 2023.8.0
  name: esphome
  namespace: homeassistant
spec:
  loadBalancerIP: 192.168.2.94
  ports:
  - name: http
    port: 6052
    targetPort: http
  selector:
    app.kubernetes.io/name: esphome
  type: LoadBalancer
