apps/homeassistant/manifests/esphome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
  labels:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/version: 2024.12.4
  name: esphome
  namespace: homeassistant
spec:
  ingressClassName: private
  rules:
    - host: esphome.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: esphome
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - esphome.ankhmorpork.thaum.xyz
      secretName: esphome-tls
